# taxi

./: .gitignore  README.md
taxi_django/: pyproject.toml
taxi_django/config/: asgi.py  settings.py  urls.py  wsgi.py
