[tool.poetry]
name = "taxi-django"
version = "0.1.0"
description = ""
authors = ["TekaLishoo <teka.lishoo@gmail.com>"]
readme = "README.md"
packages = [{include = "taxi_django"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
